--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,9 @@ build-backend = "poetry.core.masonry.api"
 black = "^25.1.0"
 ruff = "^0.11.2"
 mypy = "^1.15.0"
+pytest = "^8.3.5"
+pytest-cov = "^6.1.1"
+pytest-env = "^1.1.5"
 
 [tool.black]
 include = '\.pyi?$'
@@ -64,3 +67,15 @@ ignore = [
 quote-style = "double"
 indent-style = "space"
 line-ending = "auto"
+
+[tool.pytest.ini_options]
+addopts = '--cov-report term-missing --cov parrot/app'
+asyncio_mode = 'auto'
+
+[tool.pytest_env]
+APP_ENV = 'test'
+
+[tool.coverage.report]
+exclude_also = [
+    "raise NotImplementedError",
+]
